# LocalMonitoring

./: CMakeLists.txt  CMakeLists.txt.user.0b15757  CMakeLists.txt.user.775990c  CMakeLists.txt.user.824b444  README.md  config.json  main.cpp  pattern.json  pattern.xml
Controller/: ApplicationFacade.cpp  ApplicationFacade.h  ApplicationMediator.cpp  ApplicationMediator.h
Controller/01_Home/: homemediator.cpp  homemediator.h  homentptimecommand.cpp  homentptimecommand.h  homeproxy.cpp  homeproxy.h  mainwindowmediator.cpp  mainwindowmediator.h
Controller/01_HomeMainWindow/: mainwindowmediator.cpp  mainwindowmediator.h
Controller/02_Login/: changepwdcommand.cpp  changepwdcommand.h  logincommand.cpp  logincommand.h  loginmediator.cpp  loginmediator.h  loginproxy.cpp  loginproxy.h
Controller/02_User/: changepwdcommand.cpp  changepwdcommand.h  logincommand.cpp  logincommand.h  usermediator.cpp  usermediator.h  userproxy.cpp  userproxy.h
Controller/03_Device/: devicecommand.cpp  devicecommand.h  devicecontrolcommand.cpp  devicecontrolcommand.h  devicecontrolmediator.cpp  devicecontrolmediator.h  devicemediator.cpp  devicemediator.h  deviceproxy.cpp  deviceproxy.h  devicestatelistcommand.cpp  devicestatelistcommand.h
Controller/04_Data/: dataproxy.cpp  dataproxy.h  historydatacommand.cpp  historydatacommand.h  historydatamediator.cpp  historydatamediator.h
Model/: LoginResult.h  baseinfo.h  baseparam.h  baseresult.h
Model/01_Home/: dbstateinfo.cpp  dbstateinfo.h  homemessresult.cpp  ntptimeresult.cpp  ntptimeresult.h
Model/01_HomeMainWindow/: homemessresult.h
Model/02_Login/: changepwdresult.h  loginparam.cpp  loginresult.cpp  loginresult.h
Model/02_User/: changepwdresult.cpp  loginparam.h  loginresult.cpp  loginresult.h  userinfo.cpp  userinfo.h  userparam.cpp  userparam.h
Model/03_Device/: controldevicecommandsendresult.cpp  controldevicecommandsendresult.h  controldevicelistresult.cpp  controldevicelistresult.h  controldevicestateresult.cpp  controldevicestateresult.h  deviceparam.cpp  deviceparam.h  devicestateinfo.cpp  devicestateinfo.h  devicestateresult.cpp  devicestateresult.h  sensorstateresult.cpp  sensorstateresult.h
Model/04_Data/: sensorhistorydata.cpp  sensorhistorydata.h  sensorhistorydataresult.cpp  sensorhistorydataresult.h  sensorparam.cpp  sensorparam.h
Model/05_Draw/: alfredlineseg.cpp  alfredlineseg.h  controldevicerectitem.cpp  controldevicerectitem.h  devicerectitem.cpp  devicerectitem.h  graph.h  graphbase.cpp  graphbase.h  ploylineitem.cpp  ploylineitem.h  refreshtextitem.cpp  refreshtextitem.h  sensorrectitem.cpp  sensorrectitem.h  singlelineitem.cpp  singlelineitem.h
Resource/: res.qrc
Resource/cert/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  client.pfx  pfx.sh  server.crt  server.csr  server.key  server.pfx
Service/: mqttclientservice.cpp  mqttclientservice.h  mqttclientsingleton.cpp  mqttclientsingleton.h  ntpservice.cpp  ntpservice.h
Util/: databaserepository.cpp  databaserepository.h  queryhandler.cpp  queryhandler.h
Util/Helper/: databasestatehelper.cpp  databasestatehelper.h  jsonhelper.cpp  jsonhelper.h  ntphelper.cpp  ntphelper.h  readconfigjsonhelper.cpp  readconfigjsonhelper.h  scenefilehelper.cpp  scenefilehelper.h  securityhelper.cpp  securityhelper.h  userhelper.cpp  userhelper.h
Util/MySql/: mysqldbmanager.cpp  mysqldbmanager.h
Util/MySqlDBManager/: mysqldbmanager.h
Util/MySqlRepository/: mysqldbrepository.cpp  mysqldbrepository.h  queryhandler.h
Util/SqlServerDBManager/: sqlserverdbmanager.cpp  sqlserverdbmanager.h
View/01_Home/: dialog_databaseconnectstate.cpp  dialog_databaseconnectstate.h  dialog_databaseconnectstate.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  widget_homepage.cpp  widget_homepage.h  widget_homepage.ui
View/01_HomeMainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui  widget_homepage.cpp  widget_homepage.h
View/02_Login/: changepwddialog.cpp  changepwddialog.h  changepwddialog.ui  logindialog.cpp  logindialog.h  logindialog.ui
View/02_User/: changepwddialog.cpp  changepwddialog.h  logindialog.cpp  logindialog.h  logindialog.ui
View/03_Deivce/: devicemainwindow.cpp  devicemainwindow.h
View/03_Device/: devicemainwindow.cpp  devicemainwindow.h  devicemainwindow.ui  dialog_controldevicestate.cpp  dialog_controldevicestate.h  dialog_deivcesensorstate.cpp  dialog_deivcesensorstate.h  dialog_deivcesensorstate.ui  dialog_historydata.h  dialog_historydata.ui  dialog_sendcontroldeviceorder.cpp  dialog_sendcontroldeviceorder.h  dialog_sendcontroldeviceorder.ui  dialog_sensorrealtimedata.cpp  dialog_sensorrealtimedata.h  dialog_sensorrealtimedata.ui
View/04_Data/: dialog_historydata.cpp  dialog_historydata.h  dialog_historydata.ui  widget_historydata.cpp  widget_historydata.h  widget_historydata.ui
View/05_Draw/: alfredgraphicsscene.cpp  alfredgraphicsscene.h  alfredgraphicsview.cpp  alfredgraphicsview.h  dialog_controldevicestate.cpp  dialog_controldevicestate.h  dialog_controldevicestate.ui  dialog_deivcesensorstate.cpp  dialog_deivcesensorstate.h  dialog_deivcesensorstate.ui  dialog_sendcontroldeviceorder.h  dialog_setdevicemodel.cpp  dialog_setdevicemodel.h  dialog_setdevicemodel.ui  dialog_setwidth.cpp  dialog_setwidth.h  dialog_setwidth.ui  drawmainwindow.cpp  drawmainwindow.h  drawmainwindow.ui  ploylineitem.cpp  ploylineitem.h  singlelineitem.cpp  singlelineitem.h
